added module_type_id
