# apps/api/src/modules/admin/index.ts
@@ -1,9 +1,8 @@
-import { Router , Request , Response } from 'express';
-import { sendResponse, StatusCodes } from '@repo/response-handler';
+import { Router } from 'express';
 import { faqRoutes } from './faq/faq.routes';
 import { staticPagesRoutes } from './staticPages/staticPages.routes';
+import { adminFeedbackRoutes } from './feedback/admin.feedback.routes';
 import adminAuthMiddleware from '../../middlewares/adminAuth.middleware';
-import { adminfeedbackRoutes } from './feedback/admin.feedback.routes';
 
 const router: Router = Router();
 
@@ -14,10 +13,7 @@ router.use('/faq', adminAuthMiddleware, faqRoutes);
 router.use('/static-pages', adminAuthMiddleware, staticPagesRoutes);
 
 // admin routes
-router.use('/feedback', adminfeedbackRoutes);
-
-// Catch-all route for 404
-router.use((req: Request, res: Response) => sendResponse(res, StatusCodes.NOT_FOUND, `${req.originalUrl} not found`));
+router.use('/feedback', adminAuthMiddleware , adminFeedbackRoutes);
 
 export const adminRoutes = router;
 
