# apps/api/src/modules/user/feedback/feedback.routes.ts
@@ -1,10 +1,10 @@
 import { Router } from 'express';
+import { validateRequest } from '@repo/validator';
 import { feedbackController } from './feedback.controller';
 import { feedbackValidation } from './helpers/feedback.validation';
-import { validateRequest } from '@repo/validator';
 
 const router: Router = Router();
 
-router.post('/create', validateRequest(feedbackValidation.postFeedbackSchema), feedbackController.postFeedback);
+router.post('/', validateRequest(feedbackValidation.postFeedbackSchema), feedbackController.postFeedback);
 
 export const feedbackRoutes = router;
