# apps/api/src/modules/user/feedback/helpers/feedback.types.ts
@@ -1,8 +1,8 @@
 export interface IFeedback {
     user_id: number;
     module_id?: number | null;
+    module_type_id?: number | null;
     rating: number | null;
-    feedback: string | null;
+    feedback: string;
     type: number;
 };
-
