# packages/database/src/models/Feedback.ts
@@ -8,8 +8,9 @@ class Feedback extends BaseModel {
 
     user_id!: number;
     module_id!: number | null;
+    module_type_id!: number | null;
     rating!: number | null;
-    feedback!: string | null;
+    feedback!: string;
     type!: number;   // 1 -> System , 2 -> Module ... 
     status!: number; // 1 -> Active , 2 -> Inactive
 }
